fix: hide rootDir behind checkbox

--- a/app/components/pipeline-create-form/styles.scss
+++ b/app/components/pipeline-create-form/styles.scss
@@ -48,6 +48,10 @@
   &.good-text-input {
     border-color: $sd-success;
   }
+
+  &.root-dir {
+    width: calc(50% - 15px);
+  }
 }
 
 .success i {
